Closed Bug 1773848 Opened 3 years ago Closed 3 years ago

Thunderbird hangs when trying to add a line at the end of a table in the compose window

Categories

(Core :: DOM: Editor, defect, P2)

Firefox 102
defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
thunderbird_esr91 --- unaffected
thunderbird_esr102 --- fixed
firefox-esr91 --- unaffected
firefox-esr102 104+ fixed
firefox102 --- wontfix
firefox103 --- wontfix
firefox104 --- fixed

People

(Reporter: camille.elhage, Assigned: masayuki)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: hang, regression)

Attachments

(2 files)

Steps to reproduce:

Using TB 102.0b4
1- Open a new compose window
2- Add a table by going to the Insert menu then table - ok
3- On the last line of the table, click on the down arrow to add an additional line below the last line

Actual results:

Thunderbird hangs

Expected results:

An additional line should have been added to the table

No hang here with 102.0b5 on Mac.
Does it reproduce if you do help > troubleshoot mode?

Flags: needinfo?(camille.elhage)
Blocks: tb102found

(In reply to Wayne Mery (:wsmwk) from comment #1)

No hang here with 102.0b5 on Mac.
Does it reproduce if you do help > troubleshoot mode?

Yes TB still hangs when in Troubleshoot mode. I am using TB 102.0b4 under Windows 11.

Flags: needinfo?(camille.elhage)

(In reply to Camille from comment #2)

(In reply to Wayne Mery (:wsmwk) from comment #1)

No hang here with 102.0b5 on Mac.
Does it reproduce if you do help > troubleshoot mode?

Yes TB still hangs when in Troubleshoot mode. I am using TB 102.0b4 under Windows 11.

102.b5 got built yesterday. See if Help > About Thunderbird offers the new beta to you and try again after installing.

I also cannot reproduce on Windows daily or beta.

(In reply to Arthur K. [He/Him] from comment #3)

..
102.b5 got built yesterday. See if Help > About Thunderbird offers the new beta to you and try again after installing.

Flags: needinfo?(camille.elhage)
Flags: needinfo?(camille.elhage)

Just installed 102.0b5 and I still get the same issue when trying to add a line. I attach a small video.

The issue is still here in 102.0b7 but it has a workaround: insert a line before the last line in the table works. The issue appears only when trying to add a line after the last line in the table.

The issue is still here in 103.0b1

I can reproduce that.
Need to first click on the last line to move the add-delete-row widget (mozTableAddRowAfter) showing on the last line. Then click on the arrow-down on it -> hang. Something goes wrong after https://searchfox.org/mozilla-central/rev/3cb31675aeffd10f1f6ae7c40e24b254da7798e5/editor/libeditor/HTMLInlineTableEditor.cpp#304

Status: UNCONFIRMED → NEW
Component: Message Compose Window → DOM: Editor
Ever confirmed: true
Product: Thunderbird → Core
Version: Thunderbird 102 → unspecified

Could be a regression of bug 1730442.

Assignee: nobody → masayuki
Severity: -- → S2
Status: NEW → ASSIGNED
Keywords: hang, regression
OS: Unspecified → All
Priority: -- → P2
Regressed by: 1730442
Hardware: Unspecified → All
Version: unspecified → Firefox 102
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/de748a382c4a Make the for-loop in the lambda in `HTMLEditor::InsertTableRowsWithTransaction` refer only `cellDataInLastRow` r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch

Comment on attachment 9285985 [details]
Bug 1773848 - Make the for-loop in the lambda in HTMLEditor::InsertTableRowsWithTransaction refer only cellDataInLastRow r=m_kato!

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is a hung-up bug due to a infinite loop.
  • User impact if declined: If web apps enable inline table editor with Document.execCommand("enableInlineTableEditing"), user may meet this hung-up.
  • Fix Landed on Version: 104
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Fixed the mistake at renaming the local variable in a loop. See commit message for the detail.
Attachment #9285985 - Flags: approval-mozilla-esr102?

Hi Camille, are things working better with TB 104.0b1 now? Would be great if we could get some verification on that before uplifting to ESR.

Flags: needinfo?(camille.elhage)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #15)

Hi Camille, are things working better with TB 104.0b1 now? Would be great if we could get some verification on that before uplifting to ESR.

Hello Ryan, yes this problem is solved on my side. The issue is no more here with TB 104.0b1.
Thank you very much for this correction!
Keep it up :)

Flags: needinfo?(camille.elhage)

Comment on attachment 9285985 [details]
Bug 1773848 - Make the for-loop in the lambda in HTMLEditor::InsertTableRowsWithTransaction refer only cellDataInLastRow r=m_kato!

Thanks for the confirmation! Approved for 102.2esr.

Attachment #9285985 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: